Dark mode issue solved

--- a/animations.css
+++ b/animations.css
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 /* Animations */
 @keyframes fadeIn {
     from {
@@ -20,26 +19,3 @@
 .animate__fadeIn {
     animation-name: fadeIn;
 }
-=======
-/* Animations */
-@keyframes fadeIn {
-    from {
-        opacity: 0;
-        transform: translateY(-20px);
-    }
-    to {
-        opacity: 1;
-        transform: translateY(0);
-    }
-}
-
-/* Apply animations */
-.animate__animated {
-    animation-duration: 1s;
-    animation-fill-mode: both;
-}
-
-.animate__fadeIn {
-    animation-name: fadeIn;
-}
->>>>>>> cc43f772fb957d429c0680725126ec44cb1c5dc1
