--- a/styles.css
+++ b/styles.css
@@ -183,33 +183,6 @@ section p {
     margin-bottom: 1em;
 }
 
-/* Contact form styling */
-.contact form {
-    display: flex;
-    flex-direction: column;
-}
-
-.contact input,
-.contact button,
-.contact textarea{
-    margin-bottom: 1em;
-    padding: 0.5em;
-    border: 1px solid #ddd;
-    border-radius: 5px;
-}
-
-.contact button {
-    background-color: #333;
-    color: #fff;
-    cursor: pointer;
-    transition: background-color 0.3s;
-}
-
-.contact button:hover {
-    background-color: #ff4500;
-}
-
-
 /* Responsive styles */
 @media only screen and (max-width: 768px) {
     nav {
@@ -320,11 +293,11 @@ body.dark-mode .home {
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     margin-bottom: 2em;
-    transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+    transition: transform 0.3s, box-shadow 0.3s;
 }
 
 .project:hover {
-    transform: scale(1.02);
+    transform: translateY(-5px);
     box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
 }
 
@@ -591,14 +564,4 @@ footer {
 
 .error-page a:hover {
     background-color: #222; /* Set the background color for the button on hover */
-}
-
-/* Logo animation */
-.logo {
-    transition: transform 0.3s ease-in-out;
-}
-
-
-.logo:hover {
-    transform: scale(1.1);
 }
